<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2016 Alejandro Alcalde
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">PhotoGesture</string>

    <string name="main_title">@string/app_name</string>
    <string name="pref_title_pattern_lock">Establecer patrón</string>
    <string name="pref_title_take_photo">Echar una foto</string>
    <string name="pref_title_theme">Tema</string>
    <string name="pref_summary_theme">[ %1$s ]</string>
    <string name="pref_dialog_title_theme">Seleccionar tema</string>
    <string-array name="pref_entries_theme">
        <item>Claro</item>
        <item>Oscuro</item>
    </string-array>
    <string name="pref_title_about">Acerca de</string>

    <string name="pattern_lock_title">Pattern lock</string>
    <string name="pref_title_set_pattern">Establecer patrón de desbloqueo</string>
    <string name="pref_summary_set_pattern_none">[ Sin patrón establecido ]</string>
    <string name="pref_summary_set_pattern_has">[ Patrón establecido ]</string>
    <string name="pref_title_pattern_visible">Hacer el patrón visible</string>
    <string name="pref_summary_pattern_visible_off">El patrón se ocultará cuando se está dibujando</string>
    <string name="pref_summary_pattern_visible_on">El patrón se verá cuando se está dibujando</string>
    <string name="pref_title_clear_pattern">Borrar el patrón de bloqueo</string>
    <string name="pref_dialog_message_clear_pattern">¿Borrar el patrón de bloqueo?</string>
    <string name="pattern_cleared">El patrón ha sido borrado</string>

    <string name="set_pattern_title">Establecer patrón de desbloqueo</string>
    <string name="confirm_pattern_title">Confirmar el patrón de desbloqueo</string>
    <string name="reset_pattern_title">Confirma la contraseña para resetear el patrón</string>
    <string name="reset_pattern_message">Esto es solo un ejemplo.\n\nPulsa "OK" para resetear el patrón.</string>
    <string name="pattern_reset">El patrón de desbloqueo se ha reseteado</string>

    <string name="about_title">Acerca de</string>
    <string name="about_name">Versión modificada de PatternLock</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_credit">Zhang Hai 2016</string>
    <string name="about_github"><a href="https://github.com/DreaminginCodeZH/PatternLock">View on GitHub</a></string>

    <string name="make_photo">¡Fotografía echada!</string>
    <string name="no_camera">Este dispositivo no dispone de cámara</string>
</resources>
