<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015 Zhang Hai <Dreaming.in.Code.ZH@Gmail.com>
  ~ All Rights Reserved.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Key is specified here for dependency to work. -->
    <com.elbauldelprogramador.photogesture.preference.SetPatternPreference
        android:key="pref_key_set_pattern"
        android:persistent="false"
        android:title="@string/pref_title_set_pattern" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="pref_key_pattern_visible"
        android:summaryOff="@string/pref_summary_pattern_visible_off"
        android:summaryOn="@string/pref_summary_pattern_visible_on"
        android:title="@string/pref_title_pattern_visible" />

    <!-- support-v7 PreferenceDialogFragmentCompat needs a key to find its Preference. -->
    <com.elbauldelprogramador.photogesture.preference.ClearPatternPreference
        android:dependency="pref_key_set_pattern"
        android:dialogMessage="@string/pref_dialog_message_clear_pattern"
        android:key="pref_key_clear_pattern"
        android:title="@string/pref_title_clear_pattern" />
</PreferenceScreen>
